# timetrack

./: Cargo.toml  README.md
src/: calc.rs  error.rs  lib.rs  logger.rs  main.rs  track.rs
src/calc/: display.rs  mod.rs  raw_log.rs  span.rs
src/clear/: mod.rs
src/config/: mod.rs
src/display/: mod.rs
src/schedule/: mod.rs
src/track/: git.rs  mod.rs
src/watcher/: mod.rs
tests/: integration.rs
